k8s/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: flask-webserver:${BUILD_NUMBER}
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
