k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  selector:
    app: mysqldb
  ports:
  - port: 3306
    targetPort: 3306
